--- a/packages/zorko-web-ui/src/styles/_viewer.scss
+++ b/packages/zorko-web-ui/src/styles/_viewer.scss
@@ -7,3 +7,17 @@
 .viewer-center {
   text-align: center;
 }
+
+.viewer-page-wrap {
+  background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.viewer-content {
+  flex-grow: 1;
+  padding-top: 3.25rem;
+  width: 100%;
+}
